Fix menu spacing

--- a/components/icons/Menu.module.css
+++ b/components/icons/Menu.module.css
@@ -1,7 +1,6 @@
 
 .menu {
   position: relative;
-  margin: 0 auto;
   transform: rotate(0deg);
   transition: .5s ease-in-out;
   cursor: pointer;
